# msds

./: .env  README.md  conftest.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
adminos_lab/: asgi.py  dev_settings.py  settings.py  urls.py  wsgi.py
config/: settings.py  urls.py
docs/: acceptance-tests.md  blueprint-roadmap.md  msds-field-mapping.md  usage-examples.md
docs/deployment/: local.md  replit.md  vps.md
registers/: admin.py  apps.py  forms.py  models.py  pdf.py  tests.py  urls.py  views.py
registers/management/commands/: generate_reminders.py  weekly_backup.py
registers/migrations/: 0001_initial.py
registers/templates/registers/: register_pdf.html
